syntax = "proto3";

package mongo;

message Blog {
	string id = 1;
	string author_id = 2;
	string title = 3;
	string content = 4;
}

message CreateBlogRequest {
	Blog blog = 1; // with no id
}

message CreateBlogResponse {
	Blog blog = 1; // with id
}

message ReadBlogRequest {
	string blog_id = 1;
}

message ReadBlogResponse {
	Blog blog = 1;
}

message UpdateBlogRequest {
	Blog blog = 1;
}

message UpdateBlogResponse {
	Blog blog = 1;
}

message DeleteBlogRequest {
	string blog_id = 1;
}

message DeleteBlogResponse {
	string blog_id = 1;
}

service MongoService {
	rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse) {}
	rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse) {}
	rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogResponse) {}
	rpc DeleteBlog (DeleteBlogRequest) returns (DeleteBlogResponse) {}
}